force-app/main/default/objects/EmailMessage/fields/Email_Description__c.field-meta.xml
<CustomField>
    <fullName>Email_Description__c</fullName>
    <inlineHelpText>Describe the email for internal and stakeholder reporting</inlineHelpText>
    <label>Email Description</label>
    <length>45</length>
    <type>Text</type>
</CustomField>