force-app/main/default/objects/EmailMessage/fields/Make_Email_Private__c.field-meta.xml
<CustomField>
    <fullName>Make_Email_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to hide email from external stakeholders</inlineHelpText>
    <label>Make Email Private</label>
    <type>Checkbox</type>
</CustomField>