force-app/main/default/objects/EmailMessage/fields/Make_Email_Public__c.field-meta.xml
<CustomField>
    <fullName>Make_Email_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to make all elements of the email public to external stakeholders.</inlineHelpText>
    <label>Make Email Public</label>
    <type>Checkbox</type>
</CustomField>